fixed header spacing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,10 @@ html {
   color: $lgrey;
 }
 
+main {
+  padding-top: 5rem;
+}
+
 .jumbotron {
     height: 45vh;
     background-color: $lgrey;
